# ompi-aurelien

./: README  README.FT.ULFM.md  README.ULFM  README.md  README.ompi  VERSION  configure.ac
config/: opal_setup_ft.m4
contrib/: Makefile.am
contrib/amca-param-sets/: ft-enable-mpi  ft-mpi
contrib/platform/: ft_mpi_ulfm
ompi/: sync
ompi/attribute/: attribute_predefined.c
ompi/communicator/: Makefile.am  comm.c  comm_cid.c  comm_ft.c  comm_ft_detector.c  comm_ft_propagate.c  comm_ft_propagator.c  comm_ft_reliable_bcast.c  comm_ft_revoke.c  comm_init.c  comm_request.c  communicator.h
ompi/communicator/ft/: comm_ft.c  comm_ft_detector.c  comm_ft_propagator.c
ompi/dpm/: dpm.c
ompi/errhandler/: Makefile.am  errcode.c  errhandler.c  errhandler.h  errhandler_invoke.c  errhandler_rte.c
ompi/group/: group.h  group_init.c
ompi/include/: mpi.h.in  mpif-values.pl
ompi/info/: info.c
ompi/mca/coll/: coll.h
ompi/mca/coll/base/: base.h  coll_base_allreduce.c  coll_base_alltoall.c  coll_base_alltoallv.c  coll_base_barrier.c  coll_base_bcast.c  coll_base_comm_select.c  coll_base_comm_unselect.c  coll_base_functions.h  coll_base_gather.c  coll_base_reduce.c  coll_base_reduce_scatter.c  coll_base_util.c  coll_tags.h
ompi/mca/coll/basic/: coll_basic_allreduce.c  coll_basic_module.c
ompi/mca/coll/demo/: coll_demo_module.c
ompi/mca/coll/ftagree/: Makefile.am  coll_ftagree.c  coll_ftagree.h  coll_ftagree_component.c  coll_ftagree_earlyreturning.c  coll_ftagree_earlyterminating.c  coll_ftagree_era.h  coll_ftagree_module.c  configure.m4
ompi/mca/coll/ftbasic/: .coll_ftbasic_agreement_earlyreturning.c.swp  .windows  Makefile.am  coll_ftbasic.h  coll_ftbasic_agreement.c  coll_ftbasic_agreement.h  coll_ftbasic_agreement_earlyreturning.c  coll_ftbasic_agreement_earlyterminating.c  coll_ftbasic_component.c  coll_ftbasic_module.c  configure.m4
ompi/mca/coll/inter/: coll_inter.c
ompi/mca/coll/libnbc/: coll_libnbc.h  nbc.c
ompi/mca/coll/self/: coll_self_module.c
ompi/mca/coll/sm/: coll_sm_module.c
ompi/mca/coll/tuned/: coll_tuned_module.c
ompi/mca/io/base/: io_base_file_select.c
ompi/mca/osc/base/: osc_base_init.c
ompi/mca/pml/: pml.h
ompi/mca/pml/base/: pml_base_recvreq.h  pml_base_sendreq.h
ompi/mca/pml/ob1/: pml_ob1.c  pml_ob1.h  pml_ob1_iprobe.c  pml_ob1_irecv.c  pml_ob1_isend.c  pml_ob1_recvfrag.c  pml_ob1_recvreq.c  pml_ob1_sendreq.c  pml_ob1_sendreq.h
ompi/mpi/c/: accumulate.c  allgather.c  allgatherv.c  allreduce.c  alltoall.c  alltoallv.c  alltoallw.c  barrier.c  bcast.c  bsend.c  bsend_init.c  cart_create.c  comm_accept.c  comm_connect.c  comm_create.c  comm_create_group.c  comm_dup.c  comm_dup_with_info.c  comm_spawn.c  comm_spawn_multiple.c  comm_split.c  comm_split_type.c  dist_graph_create.c  dist_graph_create_adjacent.c  exscan.c  file_close.c  file_delete.c  file_get_amode.c  file_get_atomicity.c  file_get_byte_offset.c  file_get_group.c  file_get_info.c  file_get_position.c  file_get_position_shared.c  file_get_size.c  file_get_type_extent.c  file_get_view.c  file_iread.c  file_iread_at.c  file_iread_shared.c  (+104 more)
ompi/mpiext/ftmpi/: Makefile.am  configure.m4  help-ft-mpi.txt  mpiext_ftmpi_f90.h
ompi/mpiext/ftmpi/c/: Makefile.am  comm_agree.c  comm_failure_ack.c  comm_failure_get_acked.c  comm_iagree.c  comm_is_revoked.c  comm_ishrink.c  comm_revoke.c  comm_shrink.c  help-ft-mpi.txt  mpiext_ftmpi_c.h
ompi/mpiext/ftmpi/c/profile/: Makefile.am  defines.h
ompi/mpiext/ftmpi/f77/: comm_agree_f.c  comm_failure_ack_f.c  comm_failure_get_acked_f.c  comm_iagree_f.c  comm_revoke_f.c  comm_shrink_f.c  ftmpi_f77_support.h
ompi/mpiext/ftmpi/f77/profile/: Makefile.am
ompi/mpiext/ftmpi/mpif-h/: Makefile.am  comm_agree_f.c  comm_failure_ack_f.c  comm_failure_get_acked_f.c  comm_iagree_f.c  comm_is_revoked_f.c  comm_ishrink_f.c  comm_revoke_f.c  comm_shrink_f.c  f77_mangle.h  ftmpi_f77_support.h  mpiext_ftmpi_mpifh.h
ompi/mpiext/ftmpi/mpif-h/profile/: Makefile.am  defines.h
ompi/mpiext/ftmpi/use-mpi/: Makefile.am  mpiext_ftmpi_usempi.h
ompi/mpiext/ftmpi/use-mpi-f08/: Makefile.am  comm_agree_f08.F90  comm_failure_ack_f08.F90  comm_failure_get_acked_f08.F90  comm_iagree_f08.F90  comm_is_revoked_f08.F90  comm_revoke_f08.F90  comm_shrink_f08.F90  mpiext_ftmpi_usempif08.h
ompi/mpiext/ftmpi/use-mpi-f08/profile/: pcomm_agree_f08.F90  pcomm_failure_ack_f08.F90  pcomm_failure_get_acked_f08.F90  pcomm_iagree_f08.F90  pcomm_is_revoked_f08.F90  pcomm_revoke_f08.F90  pcomm_shrink_f08.F90
ompi/proc/: proc.c  proc.h
ompi/request/: Makefile.am  grequest.c  req_ft.c  req_test.c  req_wait.c  request.c  request.h  request_dbg.h
ompi/runtime/: ompi_mpi_finalize.c  ompi_mpi_init.c  ompi_mpi_params.c  params.h
ompi/tools/ompi_info/: param.c
opal/class/: opal_pointer_array.c  opal_pointer_array.h
opal/mca/btl/: btl.h
opal/mca/btl/openib/: btl_openib.h  btl_openib_component.c  btl_openib_endpoint.c  btl_openib_mca.c  btl_openib_proc.c
opal/mca/btl/openib/connect/: btl_openib_connect_udcm.c
opal/mca/btl/sm/: btl_sm_get.c  btl_sm_put.c
opal/mca/btl/tcp/: btl_tcp.c  btl_tcp_endpoint.c  btl_tcp_frag.c
opal/mca/btl/ugni/: btl_ugni_frag.h
opal/mca/btl/vader/: btl_vader_get.c  btl_vader_put.c
opal/mca/common/verbs/: common_verbs_basics.c  common_verbs_find_max_inline.c  common_verbs_find_ports.c
opal/mca/event/libevent2022/: configure.m4
opal/mca/hwloc/hwloc2/: configure.m4
opal/mca/pmix/pmix3x/: pmix3x_client.c
opal/mca/pmix/pmix4x/: pmix4x_client.c
opal/runtime/: opal_init.c
opal/threads/: wait_sync.c  wait_sync.h
orte/mca/errmgr/default_app/: errmgr_default_app.c
orte/mca/errmgr/default_hnp/: errmgr_default_hnp.c
orte/mca/errmgr/default_orted/: errmgr_default_orted.c
orte/mca/ess/base/: ess_base_std_app.c
orte/mca/ess/pmi/: ess_pmi_module.c
orte/mca/iof/hnp/: iof_hnp_read.c
orte/mca/odls/base/: odls_base_default_fns.c
orte/mca/rmaps/base/: rmaps_base_map_job.c
orte/mca/schizo/ompi/: schizo_ompi.c
orte/orted/: orted_submit.c  orted_submit.h
orte/runtime/: orte_mca_params.c
orte/util/: session_dir.c
(+2 files in other folders)
