#
# Copyright (c) 2010-2012 Oak Ridge National Labs.  All rights reserved.
# Copyright (c) 2016      The University of Tennessee and The University
#                         of Tennessee Research Foundation.  All rights
#                         reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers = \
	mpiext_ftmpi_usempi.h

libmpiext_ftmpi_usempi_la_SOURCES =
libmpiext_ftmpi_usempi_la_LIBADD  = $(lib_sources)
libmpiext_ftmpi_usempi_la_LDFLAGS = -module -avoid-version


noinst_HEADERS = \
        $(headers)

noinst_LTLIBRARIES = libmpiext_ftmpi_usempi.la
